[Android] Finished & Reach Target Finish
- Add checkout data to database
- Show payment pending transaction data
- Add remove/cancel transaction while in pending payment

Need to be fixed:
- Color Button Bug

--- a/Android Source Code/NIKE/app/src/main/res/layout/fragment_user_account.xml
+++ b/Android Source Code/NIKE/app/src/main/res/layout/fragment_user_account.xml
@@ -585,6 +585,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/separator_01" />
 
                 <Button
+                    android:id="@+id/orderHistoryBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
