--- a/Android Source Code/NIKE/app/src/main/res/layout/fragment_user_account.xml
+++ b/Android Source Code/NIKE/app/src/main/res/layout/fragment_user_account.xml
@@ -80,6 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
                 android:fontFamily="@font/roboto_bold"
                 android:gravity="center"
@@ -199,6 +200,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
                 android:fontFamily="@font/roboto_bold"
                 android:gravity="center"
@@ -442,6 +444,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
+                    android:layout_marginTop="32dp"
                     android:layout_marginEnd="32dp"
                     android:fontFamily="@font/roboto_bold"
                     android:gravity="center"
